# golf-pipeline

./: .env.example  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  flake.nix  justfile  pyproject.toml
.claude/agents/: data-engineer.md
.claude/skills/add-source/: SKILL.md
.claude/skills/bigquery/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
airflow/: Dockerfile
airflow/dags/: golf_pipeline_dag.py
data/samples/: sample_session.csv
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/gold/: _gold.yml  dim_club.sql  (+4 more)
dbt/seeds/: _seeds.yml  club_specs.csv  player_clubs.csv  player_profiles.csv  session_manifest.csv
dbt/tests/: assert_scd2_no_overlapping_validity.sql  assert_scd2_one_current_version.sql
docs/: README.md  architecture.md  codebase-tour.md  data-model.md  strategy-engine.md
infra/dev/: .envrc  main.tf
infra/prod/: .envrc  .terraform.lock.hcl  terraform.tfvars.example
infra/uat/: .envrc
ingestion/golf_ingest/: __init__.py  ai_mapping.py  config.py  ingest.py  loader.py  sources.py  storage.py  transform.py
modeling/: __init__.py  aim.py  app.py  bag.py  calibration.py  conditions.py  contracts.py  course.py  dispersion.py  ingest_session.py  optimize.py  physics.py  planner.py  players.py  run_benchmark.py  run_calibration.py  run_course.py  run_dispersion.py  run_optimize.py  run_plan.py  run_scoring.py  run_synthetic.py  scoring.py  synthetic.py  viz.py  warehouse.py
modeling/benchmarks/: SOURCES.md  __init__.py  collect.py  trackman_lpga_tour_averages.csv  trackman_pga_tour_averages.csv
modeling/courses/: SOURCES.md  __init__.py  build.py  torrey_pines_south.json
modeling/tests/: test_aim.py  test_batch.py  test_benchmarks.py  test_calibration.py  test_conditions.py  test_contracts.py  test_course.py  test_dispersion.py  test_ingest_session.py  test_optimize.py  test_physics.py  test_planner.py  test_players.py  test_scoring.py  test_synthetic.py
spark/jobs/: silver_transform.py
tests/: test_ai_mapping.py  test_transform.py
(+13 files in other folders)
